--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,3 +56,47 @@ exclude_lines = [
     "pragma: no cover",
     "if TYPE_CHECKING:",
 ]
+
+[tool.ruff]
+target-version = "py312"
+
+[tool.ruff.lint]
+select = [
+    "A",    # flake8-builtins (shadowing builtins)
+    "B",    # flake8-bugbear
+    "C4",   # flake8-comprehensions
+    "E",    # pycodestyle errors
+    "F",    # pyflakes
+    "I",    # isort
+    # PTH omitted: ZODB APIs use string paths throughout
+    "RUF",  # ruff-specific
+    "SIM",  # flake8-simplify
+    "T20",  # flake8-print
+    "UP",   # pyupgrade
+    "W",    # pycodestyle warnings
+]
+ignore = [
+    "E501",   # line too long
+    "RUF001", # Docstring contains ambiguous `’`
+    "RUF002", # Docstring contains ambiguous `’`
+]
+
+[tool.ruff.lint.isort]
+# plone style
+force-single-line = true
+from-first = true
+lines-after-imports = 2
+lines-between-types = 1
+no-sections = true
+order-by-type = false
+
+[tool.ruff.lint.pycodestyle]
+max-line-length = 120  # E501 triggers above this, allows flexibility
+max-doc-length = 120  # W505 triggers above this
+
+[tool.ruff.lint.per-file-ignores]
+"tests/*" = ["T201"]
+
+[tool.ty.rules]
+unsupported-base = "ignore"
+
