Add automated release workflow and VCS versioning
Replace single CI workflow with reusable workflow architecture (qa, tests,
ci, release) modeled after vtap100. Switch to hatch-vcs for dynamic
versioning from git tags. Add release pipeline with SLSA attestation,
test.pypi.org publishing on main push, and pypi.org publishing on GitHub
release. Optimize CI with concurrency control, Python 3.14 in test matrix,
and artifact-based multi-version coverage combination.

--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,13 @@ venv/
 *.swp
 *.swo
 
+# Generated version file (hatch-vcs)
+src/zodb_s3blobs/_version.py
+
 # Testing
 .pytest_cache/
 .coverage
+.coverage.*
 htmlcov/
 
 # mxdev/mxmake
