--- a/mx.ini
+++ b/mx.ini
@@ -1,3 +1,8 @@
+[cookiecutter-zope-instance]
+url = https://github.com/plone/cookiecutter-zope-instance
+pushurl = git@github.com:plone/cookiecutter-zope-instance.git
+install-mode = skip
+
 [settings]
 threads = 5
 version-overrides =
