Security: stop tracking instance.yaml, add sensitive file patterns to .gitignore
instance.yaml contained hardcoded admin/admin credentials and
debug_mode: true. Remove it from tracking and add .gitignore entries
for instance.yaml, .env files, .aws/, private keys, and credentials.

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,18 @@ htmlcov/
 constraints-mxdev.txt
 requirements-mxdev.txt
 instance/
+instance.yaml
+
+# Secrets / credentials
+.env
+.env.*
+.aws/
+*.pem
+*.key
+credentials.json
+
+# Plans / brainstorming
+plans/
 
 # OS
 .DS_Store
