Security: restrict default GITHUB_TOKEN permissions in CI workflows
Add permissions: {} (read-only) at the top level of CI, QA, and
Tests workflows to follow the principle of least privilege.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,6 +6,8 @@ on:
     branches-ignore: [main]
   pull_request:
 
+permissions: {}
+
 concurrency:
   group: ci-${{ github.ref }}
   cancel-in-progress: true
