Fix CI: add setup-uv to Ruff lint job
The Ruff job uses uvx but never installs uv via setup-uv action.

--- a/.github/workflows/qa.yaml
+++ b/.github/workflows/qa.yaml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - uses: astral-sh/setup-uv@v6
+
       - name: Run ruff check
         run: uvx ruff check .
 
