--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -27,6 +27,7 @@ jobs:
       - tests
     runs-on: ubuntu-latest
     permissions:
+      contents: read
       attestations: write
       id-token: write
 
