Add readme to pyproject.toml for PyPI long_description
twine check --strict requires long_description and content type.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ build-backend = "hatchling.build"
 name = "zodb-s3blobs"
 dynamic = ["version"]
 description = "Store ZODB blobs in S3-compatible object storage"
+readme = "README.md"
 license = "ZPL-2.1"
 requires-python = ">=3.12"
 classifiers = [
