Exclude sources/ and .claude/ from sdist
Add gitignore entries and hatch sdist exclude to prevent
development dependencies from bloating the package (191MB → 27KB).

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ constraints-mxdev.txt
 requirements-mxdev.txt
 instance/
 instance.yaml
+instance*.yaml
 
 # Secrets / credentials
 .env
@@ -42,6 +43,12 @@ instance.yaml
 *.pem
 *.key
 credentials.json
+
+# Development sources (mxdev checkouts)
+sources/
+
+# Claude Code
+.claude/
 
 # Plans / brainstorming
 plans/
